
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u16 ;
struct snd_soc_dai {struct snd_soc_component* component; } ;
struct snd_soc_component {int dummy; } ;
struct nau8810 {int regmap; } ;


 int EINVAL ;
 int NAU8810_AIFMT_I2S ;
 int NAU8810_AIFMT_LEFT ;
 int NAU8810_AIFMT_MASK ;
 int NAU8810_AIFMT_PCM_A ;
 int NAU8810_BCLKP_IB ;
 int NAU8810_CLKIO_MASK ;
 int NAU8810_CLKIO_MASTER ;
 int NAU8810_FSP_IF ;
 int NAU8810_REG_CLOCK ;
 int NAU8810_REG_IFACE ;



 unsigned int SND_SOC_DAIFMT_FORMAT_MASK ;



 unsigned int SND_SOC_DAIFMT_INV_MASK ;

 unsigned int SND_SOC_DAIFMT_MASTER_MASK ;



 int regmap_update_bits (int ,int ,int,int) ;
 struct nau8810* snd_soc_component_get_drvdata (struct snd_soc_component*) ;

__attribute__((used)) static int nau8810_set_dai_fmt(struct snd_soc_dai *codec_dai,
  unsigned int fmt)
{
 struct snd_soc_component *component = codec_dai->component;
 struct nau8810 *nau8810 = snd_soc_component_get_drvdata(component);
 u16 ctrl1_val = 0, ctrl2_val = 0;

 switch (fmt & SND_SOC_DAIFMT_MASTER_MASK) {
 case 137:
  ctrl2_val |= NAU8810_CLKIO_MASTER;
  break;
 case 136:
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_FORMAT_MASK) {
 case 134:
  ctrl1_val |= NAU8810_AIFMT_I2S;
  break;
 case 128:
  break;
 case 131:
  ctrl1_val |= NAU8810_AIFMT_LEFT;
  break;
 case 135:
  ctrl1_val |= NAU8810_AIFMT_PCM_A;
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_INV_MASK) {
 case 129:
  break;
 case 133:
  ctrl1_val |= NAU8810_BCLKP_IB | NAU8810_FSP_IF;
  break;
 case 132:
  ctrl1_val |= NAU8810_BCLKP_IB;
  break;
 case 130:
  ctrl1_val |= NAU8810_FSP_IF;
  break;
 default:
  return -EINVAL;
 }

 regmap_update_bits(nau8810->regmap, NAU8810_REG_IFACE,
  NAU8810_AIFMT_MASK | NAU8810_FSP_IF |
  NAU8810_BCLKP_IB, ctrl1_val);
 regmap_update_bits(nau8810->regmap, NAU8810_REG_CLOCK,
  NAU8810_CLKIO_MASK, ctrl2_val);

 return 0;
}
